# SmovBookX

./: .env-cmdrc  .gitignore  README.md  index.html  package.json  svgBuilder.ts  tsconfig.json  updater.json  vite.config.ts
ico/: ico.psd  icon.psd
sql/: 几种标签当不存在时插入.sql  表结构.sql
src/: App.vue  components.d.ts  env.d.ts  global_event.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  SmovBook.db  smovbook.wxs  sqlite3.lib  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  build.rs  main.rs
src-tauri/src/cmd/: cmd.rs  mod.rs  tauri_cmd.rs
src-tauri/src/crawler/: client.rs  crawler.rs  crawler_execute.rs  crawler_template.rs  error.rs  execute.rs  generate.rs  mod.rs  network.rs  save_pic.rs  template.rs
src-tauri/src/hfs/: api.rs  axum_hfs.rs  handle.rs  hfs.rs  mod.rs  res.rs  smov_method.rs
src-tauri/src/media/: convert.rs  hls_vod.rs  mod.rs
src-tauri/src/model/: folder.rs  mod.rs  smov.rs  smov.rs.rej
src-tauri/src/response/: response.rs
src-tauri/src/serve/: file.rs  mod.rs  smov.rs  smov_file.rs
src-tauri/src/task/: mod.rs  pool.rs  task.rs
src-tauri/src/util/: log.rs  mod.rs  smov_format.rs
src-tauri/src/window/: window.rs
src/components/: ActionBar.vue  ActionBarButton.vue  Artplayer.vue  FileInput.vue  ImgTray.vue  Log.vue  Navigation.vue  NavigationItem.vue  QuickButton.vue  Seek.vue  SmovDetail.vue  SmovIco.vue  SmovItem.vue  SmovList.vue
src/components/SmovDetail/: SmovDetail.ts  SmovDetail.vue
src/components/dialog/: dialog.ts  dialog.vue
src/components/qrCode/: qrCode.ts  qrCode.vue
src/copy/seek1/: Seek
src/copy/seek2/: Seek  ThreadPool
src/copy/seek3/: Seek  ThreadPool
src/layout/: index.vue
src/router/: router.ts
src/store/: Store.ts
src/ts/: ThreadPool.ts
src/type/: log.d.ts
src/util/: alert.ts  invoke.ts  time.ts
src/views/: Main.vue  Seek.copy  Seek.vue  Setting.vue  SmovDetail.vue  SmovFile.vue  SmovView.vue  TaskPool.vue  index.vue  test.vue  test1.vue  test2.vue  test3.vue
