[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.56"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "*"
serde_derive = "*"
tauri = { version = "1.0.0-rc.3", features = ["api-all", "system-tray"] }  #updater
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.9", features = ["json"] }
kuchiki = "0.8.1"
lazy_static = "*"
rusqlite = "*"
rand = "0.8.4"
regex = "*"
anyhow = { version = "1.0", default-features = false }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(windows)'.dependencies]
windows = {version="^0.32", features= [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
] }
winreg = "0.10.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
