[package]
authors = ["you"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
rust-version = "1.56"
version = "0.1.0"

[build-dependencies]
tauri-build = {version = "1", features = [] }

[dependencies]
anyhow = {version = "1.0", default-features = false}
thiserror = "1.0"
axum = "0.5"
axum-extra = "0.3"
futures-util = "0.3.21"
kuchiki = "0.8.1"
lazy_static = "*"
local_ipaddress = "0.1.3"
parking_lot = "0.12"
priority-queue = {version = "1.2.1", features = ["serde"] }
rand = "0.8.4"
regex = "*"
reqwest = {version = "0.11.9", features = ["json"] }
rusqlite = "*"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "1.0"
tauri = {version = "1", features = ["api-all", "system-tray", "updater"] }
tokio = {version = "1", features = ["full"] }
tokio-util = "0.7.2"
toml = "*"
tower-http = {version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
scraper = "0.13.0" #爬虫框架更改为scraper
# ffmpeg-next = "5.0.2" 视频合并 待定项目s

[target."cfg(any(target_os = \"windows\", target_os = \"macos\"))".dependencies]
window-shadows = {git = "https://github.com/tauri-apps/window-shadows"}
window-vibrancy = {git = "https://github.com/tauri-apps/window-vibrancy"}

[target.'cfg(windows)'.dependencies]
windows = {version = "^0.34", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "alloc",
] }
winreg = "0.10.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
